# SeuCompiler

./: CMakeLists.txt  README.md
SeuLex/: README.md  dfa.cpp  dfa.h  lex.cpp  lex.h  nfa.cpp  nfa.h  state.cpp  state.h
SeuYacc/: README.md
input/: CMakeLists.txt  README.md  main.c
test/: CMakeLists.txt  lex_rel.cpp  main.cpp
